fixed the input of the search bar in dark mode

--- a/assets/darkmode.css
+++ b/assets/darkmode.css
@@ -24,6 +24,7 @@
     }
     #Regenerate:hover{
         background-color: rgb(239 ,211, 129);
+        color: #374375;
     }
     .container
     {
